--- a/github/index.html
+++ b/github/index.html
@@ -120,7 +120,63 @@
                 </div>
             </div>
 
-            <div class="mx-2 md:mx-6" id="github"></div></div></div>
+            <div class="mx-2 md:mx-6" id="github"><a href="https://github.com/crissNb/Dynamic-Island-Sketchybar" target="_blank" rel="noopener noreferrer" class="inline-flex w-full  flex-col  justify-between sm:w-1/2">
+                            <div
+                                class="card relative m-4 flex h-40 flex-col justify-between rounded border p-4 transition duration-300 ease-[ease] dark:border-darkBorder dark:bg-darkBgAccent dark:shadow-none sm:border-none"
+                            >
+                                <div class="z-10">
+                                    <div class="text-lg font-bold" title="Dynamic-Island-Sketchybar">Dynamic-Island-Sketchybar</div>
+                                    <div class="my-3 line-clamp-2" title="Dynamic Island on iPhone 14 Pro implementation on Mac using Sketchybar">Dynamic Island on iPhone 14 Pro implementation on Mac using Sketchybar</div>
+                                </div>
+                                <div class="z-10 flex justify-between">
+                                    <div class="flex">
+                                        <div class="mr-6 flex items-center">
+                                            <i class="eva eva-star mr-1 text-amber-400"></i>
+                                            <span>41</span>
+                                        </div><div class="flex items-center">
+                                                <span class="github-language-dot" style="background-color:#89e051;"></span>
+                                                <span>Shell</span>
+                                            </div></div>
+
+                                    <div class="flex items-center">
+                                        <i class="eva eva-shuffle-2 mr-1 text-blue-500"></i>
+                                        <span>3</span>
+                                    </div>
+                                </div>
+
+                                <div class=" absolute right-0 text-9xl text-gray-50 dark:text-darkBorder">
+                                    <i class="eva eva-github-outline"></i>
+                                </div>
+                            </div>
+                        </a><a href="https://github.com/crissNb/dotfiles" target="_blank" rel="noopener noreferrer" class="inline-flex w-full  flex-col  justify-between sm:w-1/2">
+                            <div
+                                class="card relative m-4 flex h-40 flex-col justify-between rounded border p-4 transition duration-300 ease-[ease] dark:border-darkBorder dark:bg-darkBgAccent dark:shadow-none sm:border-none"
+                            >
+                                <div class="z-10">
+                                    <div class="text-lg font-bold" title="dotfiles">dotfiles</div>
+                                    <div class="my-3 line-clamp-2" title="my dotfiles based on catppuccin theme">my dotfiles based on catppuccin theme</div>
+                                </div>
+                                <div class="z-10 flex justify-between">
+                                    <div class="flex">
+                                        <div class="mr-6 flex items-center">
+                                            <i class="eva eva-star mr-1 text-amber-400"></i>
+                                            <span>9</span>
+                                        </div><div class="flex items-center">
+                                                <span class="github-language-dot" style="background-color:#89e051;"></span>
+                                                <span>Shell</span>
+                                            </div></div>
+
+                                    <div class="flex items-center">
+                                        <i class="eva eva-shuffle-2 mr-1 text-blue-500"></i>
+                                        <span>0</span>
+                                    </div>
+                                </div>
+
+                                <div class=" absolute right-0 text-9xl text-gray-50 dark:text-darkBorder">
+                                    <i class="eva eva-github-outline"></i>
+                                </div>
+                            </div>
+                        </a></div></div></div>
                 </main><footer>
     <div
         class="com-footer flex flex-col items-center border-t py-4 px-4 text-sm leading-none text-gray-600 dark:border-darkBorder dark:text-darkTextPlaceholder md:flex-row md:justify-between"
