--- a/links/index.html
+++ b/links/index.html
@@ -126,7 +126,7 @@
 
 <div class="-mx-1 inline-block w-full px-3 pb-6 sm:w-1/2 md:w-1/3">
     <a
-        href="https://github.com/"
+        href="https://github.com/crissNb"
         target="_blank"
         rel="noopener noreferrer"
         class="link-item relative z-10 inline-flex w-full cursor-pointer overflow-hidden rounded border bg-white p-4 align-top transition duration-150 ease-[ease] hover:border-theme hover:text-white hover:bg-theme dark:border-darkBorder dark:bg-darkBgAccent dark:hover:text-darkText dark:hover:bg-theme"
